<resources>
    <string name="app_name">FeedbackApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_splash">MainSplashActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Login">LogIn</string>
    <string name="Registration">Registration</string>
    <string name="title_activity_home_screen">FeedbackApp</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="email">Email</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="gender">Gender</string>
    <string name="birthdate">Birthdate</string>
    <string name="activity_sendFeedback_takePicture">Take photo</string>
    <string name="acitivty_sendFeedback_takeVideo">Take video</string>
    <string-array name="birthYear">
        <item>Year</item>
        <item>1985</item>
        <item>1986</item>
        <item>1987</item>
        <item>1988</item>
        <item>1989</item>
        <item>1990</item>
        <item>1991</item>
        <item>1992</item>
    </string-array>
    <string-array name="gender">
        <item>Gender</item>
        <item>Female</item>
        <item>Male</item>

    </string-array>
    <string name="title_activity_interests">Interests</string>
</resources>
