<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    app:theme="@style/AppTheme">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="80dp">

        <ImageView
            android:id="@+id/headerText"
            android:layout_width="200dp"
            android:layout_height="140dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logologin" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="50dp"
            android:gravity="center|bottom">

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_text_edge"
                android:ems="10"
                android:hint="@string/Username"
                android:padding="5dp"
                android:textColorHint="#bdbdbd" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etUsername"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_edge"
                android:ems="10"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:padding="5dp"
                android:textColorHint="#bdbdbd" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/etPassword"
                android:layout_alignLeft="@+id/etPassword"
                android:layout_alignRight="@+id/etPassword"
                android:layout_alignStart="@+id/etPassword"
                android:layout_below="@+id/etPassword"
                android:layout_marginTop="15dp"
                android:background="@color/primaryColorDark"
                android:minHeight="40dp"
                android:text="@string/Login"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btnRegistration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/btnLogin"
                android:layout_alignLeft="@+id/btnLogin"
                android:layout_alignRight="@+id/btnLogin"
                android:layout_alignStart="@+id/btnLogin"
                android:layout_below="@+id/btnLogin"
                android:layout_marginTop="10dp"
                android:background="@color/primaryColorDark"
                android:minHeight="40dp"
                android:text="@string/Registration"
                android:textColor="#FFFFFF" />

            <ProgressBar
                android:id="@+id/pbLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnRegistration"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:visibility="invisible" />
        </RelativeLayout>

    </RelativeLayout>



</RelativeLayout>




